Tests are added
